// Vitest Snapshot v1

exports[`performs hybridly navigations > context after navigation 1`] = `
{
  "adapter": {
    "resolveComponent": [Function],
    "swapDialog": [Function],
    "swapView": [Function],
  },
  "axios": [Function],
  "hooks": {},
  "pendingNavigation": undefined,
  "plugins": [],
  "scrollRegions": [],
  "serializer": {
    "serialize": [Function],
    "unserialize": [Function],
  },
  "state": {},
  "url": "https://localhost.test/navigation",
  "version": "abc123",
  "view": {
    "name": "target.view",
    "properties": {
      "foo": "bar",
    },
  },
}
`;

exports[`performs hybridly navigations > navigation response 1`] = `
{
  "url": "https://localhost.test/navigation",
  "version": "abc123",
  "view": {
    "name": "target.view",
    "properties": {
      "foo": "bar",
    },
  },
}
`;
